--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "generate": "nuxt generate",
+    "serve": "nuxt serve",
     "start": "nuxt start",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "test": "jest"
   },
   "dependencies": {
@@ -15,12 +17,13 @@
     "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.3.0",
     "@nuxtjs/vuetify": "^1.12.3",
+    "@vue/test-utils": "^1.3.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.5.1",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
-    "vue-jest": "^3.0.7",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.5.1"
+    "push-dir": "^0.4.1",
+    "vue-jest": "^3.0.7"
   }
 }
