--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "chart.js": "^2.9.4",
+    "json-server": "^0.17.0",
     "nuxt": "^2.15.8",
     "vue-chartjs": "^3.5.1"
   },
