--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^27.5.1",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-vue": "^8.7.1",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
     "push-dir": "^0.4.1",
