--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,14 +6,13 @@
     },
     "extends": [
         "plugin:vue/essential",
-        "airbnb-base"
+        "airbnb-base",
+        "nuxtjs"
     ],
     "parserOptions": {
         "ecmaVersion": 12
     },
     "plugins": [
         "vue"
-    ],
-    "rules": {
-    }
+    ]
 }
